--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -13,7 +13,7 @@
             <trans-unit id="homepage.cta.message">
                 <source>homepage.cta.message</source>
                 <target>
-                    Kompisbyrån hjälper människor att träffa nya kompisar. Vi skapar kontakt mellan dig som är ny 
+                    Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt mellan dig som är ny 
                     i Sverige och dig som har bott här länge. Ni träffas, fikar och övar svenska! 
                     Tillsammans kan vi öka gemenskapen i samhället. Bli en fikakompis idag!
                     
