--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -76,7 +76,7 @@
                             </li>
                             <li>
                                 You meet your new friend one time. If you like each other, you can meet again by
-                                yourself. If you want to meet new friends, you log in and make a fika friend request.
+                                yourself. If you want to meet new friends, you log in and make a new fika friend request.
                             </li>
                         </ol>
                     ]]>
@@ -201,7 +201,8 @@
                 <source>index.intro</source>
                 <target>On this page, you can find your previous fika friends and you can meet new friends by doing a fika friend request.
 
-                    You meet your new friend one time. If you like each other, you can meet again by yourself. If you want to meet new friends, you select the city you live in and then press the button "Fika friend request".
+                    You meet your new friend one time. If you like each other, you can meet again by yourself. If you want to meet new friends, you select the city you live in and then press the button "Fika friend request". 
+                    For the moment, we can only connect fika friends in Stockholm. 
 
                     If you want to change your application, you can update the form in the menu above: press on "Min profil" (My profile) and then "Inställningar" (Settings).</target>
             </trans-unit>
