--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -23,12 +23,12 @@
                 <target>
                     Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt mellan dig som är ny 
                     i Sverige och dig som har bott här länge. Ni träffas, fikar och övar svenska! 
-                    Tillsammans kan vi öka gemenskapen i samhället. Bli en fikakompis idag!
+                    Tillsammans kan vi öka gemenskapen i samhället. Bli en Fikakompis idag!
                 </target>
             </trans-unit>
             <trans-unit id="homepage.cta.button">
                 <source>homepage.cta.button</source>
-                <target>Bli fikakompis</target>
+                <target>Bli Fikakompis</target>
             </trans-unit>
             <trans-unit id="homepage.cta.musicfriend.header">
                 <source>homepage.cta.musicfriend.header</source>
