--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -206,6 +206,10 @@
                 <source>user.form.has_children</source>
                 <target>I have children:</target>
             </trans-unit>
+            <trans-unit id="user.form.musicfriend">
+                <source>user.form.musicfriend</source>
+                <target>Music friend</target>
+            </trans-unit>
             <trans-unit id="user.form.facebook">
                 <source>user.form.facebook</source>
                 <target>Fetch profile picture from Facebook</target>
