--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -13,10 +13,9 @@
             <trans-unit id="homepage.cta.message">
                 <source>homepage.cta.message</source>
                 <target>
-                    Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt mellan dig som är ny 
-                    i Sverige och dig som har bott här länge. Ni träffas, fikar och övar svenska! 
-                    Tillsammans kan vi öka gemenskapen i samhället. Bli en fikakompis idag!
-                    
+                    Kompisbyrån hjälper människor att träffa nya kompisar med gemensamma intressen. Vi skapar 
+                    kontakt mellan dig som är ny i Sverige och dig som har bott i Sverige länge. Ni träffas, 
+                    fikar och övar svenska! Tillsammans kan vi öka gemenskapen i samhället. Bli en fikakompis idag!
                 </target>
             </trans-unit>
             <trans-unit id="homepage.cta.button">
