--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -22,7 +22,7 @@
                 <source>homepage.cta.message</source>
                 <target>
                     Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt mellan dig som är ny 
-                    i Sverige och dig som har bott här länge. Ni träffas, fikar och övar svenska! 
+                    i Sverige och dig som har bott i Sverige länge. Ni träffas, fikar och övar svenska! 
                     Tillsammans kan vi öka gemenskapen i samhället. Bli en Fikakompis idag!
                 </target>
             </trans-unit>
