--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -88,7 +88,7 @@
             </trans-unit>
             <trans-unit id="register.musicfriend.intro">
                 <source>register.musicfriend.intro</source>
-                <target>Dela musikupplevelser med människor från andra kulturer. Vi vet att musik är en stark förenande kraft.
+                <target>Dela ditt musikintresse med människor från olika kulturer. Vi vet att musik är en stark förenande kraft.
                 Därför startar vi nu Musikkompis, tillsammans med mobiloperatören 3, för alla som vill mötas genom musik.
                 Det kan vara allt från att spela musik tillsammans, lyssna eller prata musik över en fika.</target>
             </trans-unit>
