--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -21,9 +21,11 @@
             <trans-unit id="homepage.cta.message">
                 <source>homepage.cta.message</source>
                 <target>
-                    Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt mellan dig som är ny 
-                    i Sverige och dig som har bott i Sverige länge. Ni träffas, fikar och övar svenska! 
-                    Tillsammans kan vi öka gemenskapen i samhället. Bli en Fikakompis idag!
+                    Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt 
+                    mellan dig som är ny i Sverige och dig som har bott i Sverige länge. Du kan bli Fikakompis eller 
+                    Musikkompis.<br> 
+                    Som Fikakompis blir du matchad med en person med liknande intressen som du har. Ni träffas, fikar 
+                    och övar svenska! Tillsammans kan vi öka gemenskapen i samhället. Bli en Fikakompis idag!
                 </target>
             </trans-unit>
             <trans-unit id="homepage.cta.button">
