Revert "Fix br tag that crashed translation file"
This reverts commit e2d178993411d3106dd2522485615f24fe2abc6a.

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -69,7 +69,7 @@
                 <target>
                     Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt 
                     mellan dig som är ny i Sverige och dig som har bott i Sverige länge. Du kan bli Fikakompis eller 
-                    Musikkompis. <![CDATA[ <br /><br /> ]]>
+                    Musikkompis.<br> 
                     Som Fikakompis blir du matchad med en person med liknande intressen som du har. Ni träffas, fikar 
                     och övar svenska! Tillsammans kan vi öka gemenskapen i samhället. Bli en Fikakompis idag!
                 </target>
