--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -145,8 +145,12 @@
                 <target>Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkompis, tillsammans med 
                     <![CDATA[ <a href="//tre.se/musikkompis">mobiloperatören 3</a> ]]>, för alla som vill mötas genom musik. Det kan vara allt från att spela musik tillsammans, lyssna eller prata musik över en fika.</target>
             </trans-unit>
-            <trans-unit id="register.musicfriend.text">
-                <source>register.musicfriend.text</source>
+            <trans-unit id="register.musicfriend.footer.header">
+                <source>register.musicfriend.footer.header</source>
+                <target>Musikkompis är ett initiativ av 3 och Kompisbyrån</target>
+            </trans-unit>
+            <trans-unit id="register.musicfriend.footer.text">
+                <source>register.musicfriend.footer.text</source>
                 <target>Genom att dela musikupplevelser med varandra kan vi skapa många stunder av gemenskap och samhörighet oavsett var du kommer ifrån eller tror på. Stunder som i slutändan bidrar till större tolerans och ökad förståelse i samhället. Därför har vi startat projektet Musikkompis – ett ideellt samarbete mellan 3 och Kompisbyrån som syftar till att med musikens hjälp stärka integrationen och gemenskapen i samhället. Vi vill ge fler möjlighet att utöva musik tillsammans, människor som på olika nivåer sysslar med musik: artister, källarband, DJ:s, klassiska musiker, konsertbesökare och andra musikintresserade. Bli Musikkompis du också.</target>
             </trans-unit>
             <trans-unit id="register.musicfriend.videoheader">
